Archive2/b8/c4774b8070ffee/output
main.cpp: In function 'int main(int, char**)':
main.cpp:29:114: error: cannot convert 'char (*)[5]' to 'unsigned char*' for argument '1' to 'short unsigned int checksum_crc16(unsigned char*, int)'
   fprintf( stdout, "check '%s' of size %lu output: %u\n", "lol", sizeof test, checksum_crc16( &test, sizeof test ) );
                                                                                                                  ^
